{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 234,
  "lineage": "cc1a1bfb-8f61-0a29-78b8-7fc047bd20fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d246151e78ae04d8",
            "arn": "arn:aws:ec2:us-east-1:284680992525:instance/i-0e86817be665eae0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "CodeDeployEC2ServiceRole",
            "id": "i-0e86817be665eae0a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0146bc03a94e0c69c",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-34-200-238-99.compute-1.amazonaws.com",
            "public_ip": "34.200.238.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a2934da88c5cd876",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07f0d6c32dced19ea",
            "tags": {
              "name": "Web instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010a8d3a7429711d1"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.role1_profile",
            "aws_instance.mongoDB",
            "aws_security_group.web_sec",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongoDB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d246151e78ae04d8",
            "arn": "arn:aws:ec2:us-east-1:284680992525:instance/i-0225ea0e3b1defb93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "CodeDeployEC2ServiceRole",
            "id": "i-0225ea0e3b1defb93",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe3d7ddfc6886893",
            "private_dns": "ip-10-0-2-232.ec2.internal",
            "private_ip": "10.0.2.232",
            "public_dns": "ec2-3-87-251-58.compute-1.amazonaws.com",
            "public_ip": "3.87.251.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09f15aba7b2d2cc62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7eb5fc9f94e4faf",
            "tags": {
              "name": "My DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fdea9b2efc9be300"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.role1_profile",
            "aws_security_group.db_sec",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dcda1ee9afa332ce",
            "owner_id": "284680992525",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09c8a71ac62717360",
            "owner_id": "284680992525",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcda1ee9afa332ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table"
            },
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "psubnet_to_rb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d8e92e05f13973d",
            "route_table_id": "rtb-09c8a71ac62717360",
            "subnet_id": "subnet-07f0d6c32dced19ea"
          },
          "depends_on": [
            "aws_route_table.route_tb",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284680992525:security-group/sg-0fdea9b2efc9be300",
            "description": "Allow traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5500
              }
            ],
            "id": "sg-0fdea9b2efc9be300",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5500
              }
            ],
            "name": "sg_test_web",
            "name_prefix": null,
            "owner_id": "284680992525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284680992525:security-group/sg-010a8d3a7429711d1",
            "description": "Http and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010a8d3a7429711d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web security group",
            "name_prefix": null,
            "owner_id": "284680992525",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "security group for webServer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284680992525:subnet/subnet-0f7eb5fc9f94e4faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f7eb5fc9f94e4faf",
            "map_public_ip_on_launch": true,
            "owner_id": "284680992525",
            "tags": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284680992525:subnet/subnet-0d3779f1387a05052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d3779f1387a05052",
            "map_public_ip_on_launch": true,
            "owner_id": "284680992525",
            "tags": {
              "Name": "my_private_subnet2"
            },
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284680992525:subnet/subnet-07f0d6c32dced19ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07f0d6c32dced19ea",
            "map_public_ip_on_launch": true,
            "owner_id": "284680992525",
            "tags": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0c8c97f167be6ccd8"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284680992525:vpc/vpc-0c8c97f167be6ccd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0c8659accfce77f",
            "default_route_table_id": "rtb-073990d0452353492",
            "default_security_group_id": "sg-024a49185eb9ec24b",
            "dhcp_options_id": "dopt-0c0db8b01483ce699",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c8c97f167be6ccd8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-073990d0452353492",
            "owner_id": "284680992525",
            "tags": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}